tests/errors/erro_tipo.lua
function void main()
    local x: integer = 10;
    local y: string = "hello";
    x = y; -- Erro de tipo
end
